Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-369: bin/giraph broken (Nitay Joffe via ereisman)

  GIRAPH-368: HBase Vertex I/O formats handle setConf() internally (bfem via ereisman)

  GIRAPH-367: Expose WorkerInfo to clients (Nitay Joffe via ereisman)

  GIRAPH-370: AccumuloVertexOutputFormat public visibility for
  TABLE_NAME. (bfem via aching)

  GIRAPH-366: TestGraphPartitioner should use getTempPath() everywhere

  GIRAPH-346: Top Level POM. (nitay via aching)

  GIRAPH-200: Remove hadoop RPC and keep just netty. (apresta)

  GIRAPH-363: Fix hadoop_0.23 profile broken by GIRAPH-211 (ekoontz)

  GIRAPH-211: Add secure authentication to Netty IPC (ekoontz)

  GIRAPH-361: Hive output partition parsing is broken (nitay via apresta)

  GIRAPH-360: Keep track of the task id in ChannelRotater to send
  requests without knowing the worker id upfront (aching via
  ekoontz)

  GIRAPH-307: InputSplit list can be long with many workers 
  (and locality info) and should not be re-created every time a 
  worker calls reserveInputSplit() (ereisman via majakabiljo)

  GIRAPH-358: Rename package format->io in giraph-formats-contrib for
  consistency with main package. (apresta via aching)

  GIRAPH-350: HBaseVertex i/o formats are not being injected with
  Configuration via Configurable interface. (bfem via aching)

  GIRAPH-356: Improve ZooKeeper issues. (aching)

  GIRAPH-342: Recursive ZooKeeper calls should call progress, dynamic 
  ZooKeeper can skip delete (aching via majakabiljo)

  GIRAPH-351: Fail job early when there is no input (aching via ereisman)

  GIRAPH-212: Security is busted since GIRAPH-168. (ekoontz via
  aching)

  GIRAPH-315: giraph-site.xml isn't read on time. (majakabiljo via
  aching)

  GIRAPH-325: One more progress call. (majakabiljo via aching)

  GIRAPH-328: Outgoing messages from current superstep should be
  grouped at the sender by owning worker, not by partition. (Eli
  Reisman via aching)
