@@ -22,7 +22,7 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.giraph.graph.BspUtils;
+import org.apache.giraph.ImmutableClassesGiraphConfiguration;
 import org.apache.giraph.graph.Vertex;
 import org.apache.giraph.graph.VertexInputFormat;
 import org.apache.giraph.graph.VertexReader;
@@ -59,41 +59,45 @@ import org.apache.log4j.Logger;
 
 @SuppressWarnings("rawtypes")
 public abstract class HCatalogVertexInputFormat<
-        I extends WritableComparable,
-        V extends Writable,
-        E extends Writable,
-        M extends Writable>
-        extends VertexInputFormat<I, V, E, M> {
+    I extends WritableComparable,
+    V extends Writable,
+    E extends Writable,
+    M extends Writable>
+    extends VertexInputFormat<I, V, E, M> {
   /**
-  * H catalog input format.
-  */
+   * H catalog input format.
+   */
   private HCatInputFormat hCatInputFormat = new HCatInputFormat();
 
   @Override
   public final List<InputSplit> getSplits(
-            final JobContext context, final int numWorkers)
+      final JobContext context, final int numWorkers)
     throws IOException, InterruptedException {
     return hCatInputFormat.getSplits(context);
   }
 
- /**
-  * Abstract class that users should subclass
-  * based on their specific vertex
-  * input. HCatRecord can be parsed to get the
-  * required data for implementing
-  * getCurrentVertex(). If the vertex spans more
-  * than one HCatRecord,
-  * nextVertex() should be overwritten to handle that logic as well.
-  */
+  /**
+   * Abstract class that users should subclass
+   * based on their specific vertex
+   * input. HCatRecord can be parsed to get the
+   * required data for implementing
+   * getCurrentVertex(). If the vertex spans more
+   * than one HCatRecord,
+   * nextVertex() should be overwritten to handle that logic as well.
+   */
   protected abstract class HCatalogVertexReader implements
-        VertexReader<I, V, E, M> {
-
+      VertexReader<I, V, E, M> {
+    /** Giraph configuration */
+    private ImmutableClassesGiraphConfiguration<I, V, E, M> configuration;
     /** Internal HCatRecordReader. */
     private RecordReader<WritableComparable,
-                HCatRecord> hCatRecordReader;
-
+        HCatRecord> hCatRecordReader;
     /** Context passed to initialize. */
     private TaskAttemptContext context;
+
+    public ImmutableClassesGiraphConfiguration<I, V, E, M> getConfiguration() {
+      return configuration;
+    }
 
     /**
      * Initialize with the HCatRecordReader.
@@ -101,27 +105,28 @@ public abstract class HCatalogVertexInputFormat<
      * @param recordReader internal reader
      */
     private void initialize(
-       final RecordReader<
-                   WritableComparable, HCatRecord>
-                   recordReader) {
+        final RecordReader<
+            WritableComparable, HCatRecord>
+            recordReader) {
       this.hCatRecordReader = recordReader;
     }
 
     @Override
     public final void initialize(
-           final InputSplit inputSplit,
-           final TaskAttemptContext ctxt)
+        final InputSplit inputSplit,
+        final TaskAttemptContext ctxt)
       throws IOException, InterruptedException {
       hCatRecordReader.initialize(inputSplit, ctxt);
       this.context = ctxt;
+      this.configuration = new ImmutableClassesGiraphConfiguration<I, V, E, M>(
+          context.getConfiguration());
     }
 
     @Override
-    public boolean nextVertex()
-      throws IOException, InterruptedException {
-       // Users can override this if desired,
-       // and a vertex is bigger than
-       // a single row.
+    public boolean nextVertex() throws IOException, InterruptedException {
+      // Users can override this if desired,
+      // and a vertex is bigger than
+      // a single row.
       return hCatRecordReader.nextKeyValue();
     }
 
@@ -131,222 +136,217 @@ public abstract class HCatalogVertexInputFormat<
     }
 
     @Override
-    public final float getProgress()
-      throws IOException, InterruptedException {
+    public final float getProgress() throws IOException, InterruptedException {
       return hCatRecordReader.getProgress();
     }
 
     /**
-    * Get the record reader.
-    * @return Record reader to be used for reading.
-    */
+     * Get the record reader.
+     * @return Record reader to be used for reading.
+     */
     protected final RecordReader<WritableComparable, HCatRecord>
     getRecordReader() {
       return hCatRecordReader;
     }
 
-   /**
-    * Get the context.
-    *
-    *
-    *
-    * @return Context passed to initialize.
-    */
+    /**
+     * Get the context.
+     *
+     *
+     *
+     * @return Context passed to initialize.
+     */
     protected final TaskAttemptContext getContext() {
       return context;
     }
   }
 
   /**
-  * create vertex writer instance.
-  * @return HCatalogVertexReader
-  */
+   * create vertex writer instance.
+   * @return HCatalogVertexReader
+   */
   protected abstract HCatalogVertexReader createVertexReader();
 
   @Override
   public final VertexReader<I, V, E, M>
   createVertexReader(final InputSplit split,
-    final TaskAttemptContext context)
+                     final TaskAttemptContext context)
     throws IOException {
     try {
       HCatalogVertexReader reader = createVertexReader();
       reader.initialize(hCatInputFormat.
-              createRecordReader(split, context));
+          createRecordReader(split, context));
       return reader;
     } catch (InterruptedException e) {
       throw new IllegalStateException(
-               "createVertexReader: " +
-                      "Interrupted creating reader.", e);
+          "createVertexReader: " +
+              "Interrupted creating reader.", e);
     }
   }
 
- /**
-  * HCatalogVertexReader for tables holding
-  * complete vertex info within each
-  * row.
-  */
+  /**
+   * HCatalogVertexReader for tables holding
+   * complete vertex info within each
+   * row.
+   */
   protected abstract class SingleRowHCatalogVertexReader
-        extends HCatalogVertexReader {
+      extends HCatalogVertexReader {
 
     /**
-    * 1024 const.
-    */
+     * 1024 const.
+     */
     private static final int BYTE_CONST = 1024;
 
     /**
-    *  logger
-    */
+     *  logger
+     */
     private final Logger log =
-            Logger.getLogger(SingleRowHCatalogVertexReader.class);
+        Logger.getLogger(SingleRowHCatalogVertexReader.class);
     /**
-    * record count.
-    */
+     * record count.
+     */
     private int recordCount = 0;
     /**
-    * modulus check counter.
-    */
+     * modulus check counter.
+     */
     private final int recordModLimit = 1000;
 
 
     /**
-    * get vertex id.
-    * @param record hcat record
-    * @return I id
-         */
+     * get vertex id.
+     * @param record hcat record
+     * @return I id
+     */
     protected abstract I getVertexId(HCatRecord record);
 
     /**
-    * get vertext value.
-    * @param record hcat record
-    * @return V value
-    */
+     * get vertex value.
+     * @param record hcat record
+     * @return V value
+     */
     protected abstract V getVertexValue(HCatRecord record);
 
     /**
-    * get edges.
-    * @param record hcat record
-    * @return Map edges
-    */
+     * get edges.
+     * @param record hcat record
+     * @return Map edges
+     */
     protected abstract Map<I, E> getEdges(HCatRecord record);
 
     @Override
     public final Vertex<I, V, E, M> getCurrentVertex()
       throws IOException, InterruptedException {
       HCatRecord record = getRecordReader().getCurrentValue();
-      Vertex<I, V, E, M> vertex =
-                    BspUtils.createVertex(getContext()
-                            .getConfiguration());
+      Vertex<I, V, E, M> vertex = getConfiguration().createVertex();
       vertex.initialize(getVertexId(record), getVertexValue(record),
-                    getEdges(record));
+          getEdges(record));
       ++recordCount;
       if ((recordCount % recordModLimit) == 0) {
         log.info("read " + recordCount + " records");
-                // memory usage
+        // memory usage
         Runtime runtime = Runtime.getRuntime();
         double gb = BYTE_CONST *
-                    BYTE_CONST *
-                    BYTE_CONST;
+            BYTE_CONST *
+            BYTE_CONST;
         log.info("Memory: " + (runtime.totalMemory() / gb) +
-                "GB total = " +
-                ((runtime.totalMemory() - runtime.freeMemory()) / gb) +
-                "GB used + " + (runtime.freeMemory() / gb) +
-                "GB free, " + (runtime.maxMemory() / gb) + "GB max");
+            "GB total = " +
+            ((runtime.totalMemory() - runtime.freeMemory()) / gb) +
+            "GB used + " + (runtime.freeMemory() / gb) +
+            "GB free, " + (runtime.maxMemory() / gb) + "GB max");
       }
       return vertex;
     }
   }
   /**
-  * HCatalogVertexReader for tables
-  * holding vertex info across multiple rows
-  * sorted by vertex id column,
-  * so that they appear consecutively to the
-  * RecordReader.
-  */
+   * HCatalogVertexReader for tables
+   * holding vertex info across multiple rows
+   * sorted by vertex id column,
+   * so that they appear consecutively to the
+   * RecordReader.
+   */
   protected abstract class MultiRowHCatalogVertexReader extends
-            HCatalogVertexReader {
+      HCatalogVertexReader {
     /**
-    * modulus check counter.
-    */
+     * modulus check counter.
+     */
     private static final int RECORD_MOD_LIMIT = 1000;
 
     /**
-    *  logger
-    */
+     *  logger
+     */
     private final Logger log =
-            Logger.getLogger(MultiRowHCatalogVertexReader.class);
+        Logger.getLogger(MultiRowHCatalogVertexReader.class);
     /**
-    * current vertex id.
-    */
+     * current vertex id.
+     */
     private I currentVertexId = null;
     /**
-    * destination edge map.
-    */
+     * destination edge map.
+     */
     private Map<I, E> destEdgeMap = Maps.newHashMap();
     /**
-    * record for vertex.
-    */
+     * record for vertex.
+     */
     private List<HCatRecord> recordsForVertex = Lists.newArrayList();
     /**
-    * record count.
-    */
+     * record count.
+     */
     private int recordCount = 0;
     /**
-    * vertex.
-    *
-    */
+     * vertex.
+     *
+     */
     private Vertex<I, V, E, M> vertex = null;
     /**
-    * get vertex id from record.
-    *
-    * @param record hcat
-    * @return I vertex id
-    */
+     * get vertex id from record.
+     *
+     * @param record hcat
+     * @return I vertex id
+     */
     protected abstract I getVertexId(HCatRecord record);
 
     /**
-    * get vertex value from record.
-    * @param records all vertex values
-    * @return V iterable of record values
-    */
+     * get vertex value from record.
+     * @param records all vertex values
+     * @return V iterable of record values
+     */
     protected abstract V getVertexValue(
-                Iterable<HCatRecord> records);
+        Iterable<HCatRecord> records);
 
     /**
-    * get target vertex id from record.
-    *
-    * @param record hcat
-    * @return I vertex id of target.
-    */
+     * get target vertex id from record.
+     *
+     * @param record hcat
+     * @return I vertex id of target.
+     */
     protected abstract I getTargetVertexId(HCatRecord record);
 
     /**
-    * get edge value from record.
-    *
-    * @param record hcat.
-    * @return E edge value.
-    */
+     * get edge value from record.
+     *
+     * @param record hcat.
+     * @return E edge value.
+     */
     protected abstract E getEdgeValue(HCatRecord record);
 
     @Override
     public final Vertex<I, V, E, M>
-    getCurrentVertex()
-      throws IOException, InterruptedException {
+    getCurrentVertex() throws IOException, InterruptedException {
       return vertex;
     }
 
     @Override
-    public boolean nextVertex()
-      throws IOException, InterruptedException {
+    public boolean nextVertex() throws IOException, InterruptedException {
       while (getRecordReader().nextKeyValue()) {
         HCatRecord record =
-                getRecordReader().getCurrentValue();
+            getRecordReader().getCurrentValue();
         if (currentVertexId == null) {
           currentVertexId = getVertexId(record);
         }
         if (currentVertexId.equals(getVertexId(record))) {
           destEdgeMap.put(
-            getTargetVertexId(record),
-            getEdgeValue(record));
+              getTargetVertexId(record),
+              getEdgeValue(record));
           recordsForVertex.add(record);
         } else {
           createCurrentVertex();
@@ -368,11 +368,10 @@ public abstract class HCatalogVertexInputFormat<
     }
 
     /**
-    * create current vertex.
-    */
+     * create current vertex.
+     */
     private void createCurrentVertex() {
-      vertex = BspUtils.
-              createVertex(getContext().getConfiguration());
+      vertex = getConfiguration().createVertex();
       vertex.initialize(currentVertexId, getVertexValue(recordsForVertex),
           destEdgeMap);
       destEdgeMap.clear();
