@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-371: Replace BspUtils in giraph-formats-contrib for
+  speed. (aching)
+
   GIRAPH-369: bin/giraph broken (Nitay Joffe via ereisman)
 
   GIRAPH-368: HBase Vertex I/O formats handle setConf() internally (bfem via ereisman)
